--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,10 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css);
 
+.IviQcWBiigetlYAycwF22w\=\= {
 
+}
+
+/* Bootstrap*/
+
+/* Components */
 
