--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,2 +1,6 @@
+/* Bootstrap*/
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
-@import "components/navbar.css";
+
+/* Components */
+@import "components/navbar.module.css";
+@import "components/footer.module.css";
