refactor(Root): Change in some components

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,4 +3,4 @@
 
 /* Components */
 @import "components/navbar.module.css";
-@import "components/footer.module.css";
+@import "components/footer.css";
