--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,9 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css);
 
-.IviQcWBiigetlYAycwF22w\=\= {
-
+.footer {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
 }
 
 /* Bootstrap*/
