--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,20 @@
-/* Bootstrap*/
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
-
-/* Components */
-@import "components/navbar.module.css";
-@import "components/footer.css";
+    /* Bootstrap*/
+    
+    @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
+    /* Components */
+    
+    @import "components/navbar.css";
+    @import "components/footer.css";
+    @import "homepage.css";
+    /* Icons */
+    
+    @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+    /* AOS */
+    
+    @import "https://unpkg.com/aos@2.3.1/dist/aos.css";
+    * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+        font-family: 'Signika Negative', sans-serif;
+    }
