--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,17 +43,14 @@ nav.navbar {
     position: absolute;
 }
 
-.header .fondo {
+.header .background {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(#0008, #0008), url(https://www.10wallpaper.com/wallpaper/1680x1050/1407/beauty_fashion_woman-Photo_background_wallpaper_1680x1050.jpg);
-    background-repeat: no-repeat;
+    background: linear-gradient(#0008, #0008), url("https://www.10wallpaper.com/wallpaper/1680x1050/1407/beauty_fashion_woman-Photo_background_wallpaper_1680x1050.jpg") no-repeat fixed;
     background-size: cover;
-    background-attachment: fixed;
     border-radius: 0 0 0 250px;
     display: flex;
     align-items: center;
-    margin: 0;
 }
 
 .text-title h1 {
@@ -67,9 +64,7 @@ nav.navbar {
     width: 100px;
 }
 
-
-/* about title */
-
+/* About title */
 .mision-vision-container .about-title {
     margin-bottom: 40px;
     text-align: center;
@@ -91,9 +86,7 @@ nav.navbar {
        object-fit: cover;
 }
 
-
-/* botones de header */
-
+/* Header buttons */
 .btn-welcome {
     width: 200px;
     padding: 10px 0;
@@ -115,8 +108,7 @@ nav.navbar {
 }
 
 
-/*  Animaciones de botones */
-
+/*  Buttons animations */
 .btn-welcome:hover:nth-child(1) {
     cursor: pointer;
     -webkit-animation: animated .5s ease-in 1;
@@ -125,7 +117,7 @@ nav.navbar {
 
 @-webkit-keyframes animated {
     from {
-        box-shadow: 0 0 0 0px #620b8acc;
+        box-shadow: 0 0 0 0 #620b8acc;
     }
     to {
         box-shadow: 0 0 0 40px #620b8a1e;
@@ -134,19 +126,26 @@ nav.navbar {
 
 @keyframes animated {
     from {
-        box-shadow: 0 0 0 0px #620b8acc;
+        box-shadow: 0 0 0 0 #620b8acc;
     }
     to {
         box-shadow: 0 0 0 40px #620b8a1e;
     }
 }
-    /* Bootstrap*/
+
+    /* Bootstrap */
+
     /* Components */
+
     /* Icons */
+
     /* AOS */
+
     * {
         box-sizing: border-box;
         padding: 0;
         margin: 0;
         font-family: 'Signika Negative', sans-serif;
+        overflow-x: hidden;
     }
+
