--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css);
 @import url(https://unpkg.com/aos@2.3.1/dist/aos.css);
+@import url(https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap);
 .navbar-scroll {
     transition: all 0.7s ease-in-out;
     background-color: #670b6a;
@@ -21,17 +22,38 @@
 
 a.nav-link {
     color: #fff;
+    position: relative;
+    margin-left: 20px;
 }
 
 a.nav-link:hover {
-    color: #bbb;
+    color: #fff;
+}
+
+a.nav-link:after {
+    content: "";
+    width: 0%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 32px;
+    transition: all .5s ease;
+}
+
+a.nav-link:hover:after {
+    width: 100%;
+}
+
+a.nav-link:focus {
+    color: #fff;
 }
 
 .social-networks ul li,
 a {
     color: #fff;
     font-size: 20px;
-    margin-left: 10px;
 }
 
 nav.navbar {
@@ -141,11 +163,14 @@ nav.navbar {
 
 /* AOS */
 
+/* Font */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Signika Negative', sans-serif;
-    overflow-x: hidden;
 }
 
+body {
+    overflow-x: hidden;
+}
