feat(Root): Create Post controller

--- a/resources/sass/dashboard/app.scss
+++ b/resources/sass/dashboard/app.scss
@@ -226,7 +226,7 @@
 
 /*-------------------------------------------------------------------*/
 /* === Landing screens === */
-// @import "components/landing-screens/auth";
+@import "components/landing-screens/auth";
 
 @import './navbar';
 @import './sidebar';
