--- a/resources/sass/dashboard/components/landing-screens/_auth.scss
+++ b/resources/sass/dashboard/components/landing-screens/_auth.scss
@@ -2,19 +2,19 @@
 
 .auth {
 	&.login-bg {
-		// background: url("../images/auth/Login_bg.jpg");
+		background: url("../../../../images/auth/Login_bg.jpg");
 		background-size: cover;
 	}
 	.login-half-bg {
-        // background: url("../images/auth/login-bg.jpg");
+        background: url("../../../../images/auth/login-bg.jpg");
 		background-size: cover;
 	}
 	&.register-half-bg {
-		// background: url("../images/auth/Login_bg2.jpg");
+		background: url("../../../../images/auth/Login_bg2.jpg");
 		background-size: cover;
 	}
 	&.lock-full-bg {
-		// background: url("../images/auth/lockscreen-bg.jpg");
+		background: url("../../../../images/auth/lockscreen-bg.jpg");
 		background-size: cover;
 	}
 	.lock-profile-img {
