--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @import "components/navbar.css";
 @import "components/footer.css";
 @import "homepage.css";
+@import "gallery.css";
 
 /* Icons */
 
