--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -1,11 +1,26 @@
 .header {
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.carousel-1 {
     background: linear-gradient(#0008, #0008), url("https://www.10wallpaper.com/wallpaper/1680x1050/1407/beauty_fashion_woman-Photo_background_wallpaper_1680x1050.jpg") no-repeat fixed;
     background-size: cover;
     border-radius: 0 0 0 250px;
-    display: flex;
-    align-items: center;
+}
+
+.carousel-2 {
+    background: linear-gradient(#0008, #0008), url("https://media-we-cdn.oriflame.com/-/media/WE/Images/2022/CE/C3/beauty-edits-cms/b1-how-to-use-hybrid-make-up-to-achieve-a-radiant-look.ashx?u=0101010000&q=90") no-repeat fixed;
+    background-size: cover;
+    border-radius: 0 0 0 250px;
+}
+
+.carousel-3 {
+    background: linear-gradient(#0008, #0008), url("https://academiaestrellas.com/wp-content/uploads/2016/04/bellezatodoslosdias.jpg") no-repeat fixed;
+    background-size: cover;
+    border-radius: 0 0 0 250px;
 }
 
 .text-title h1 {
