--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -1,11 +1,26 @@
 .header {
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.carousel-1 {
     background: linear-gradient(#0008, #0008), url("https://www.10wallpaper.com/wallpaper/1680x1050/1407/beauty_fashion_woman-Photo_background_wallpaper_1680x1050.jpg") no-repeat fixed;
     background-size: cover;
     border-radius: 0 0 0 250px;
-    display: flex;
-    align-items: center;
+}
+
+.carousel-2 {
+    background: linear-gradient(#0008, #0008), url("https://media-we-cdn.oriflame.com/-/media/WE/Images/2022/CE/C3/beauty-edits-cms/b1-how-to-use-hybrid-make-up-to-achieve-a-radiant-look.ashx?u=0101010000&q=90") no-repeat fixed;
+    background-size: cover;
+    border-radius: 0 0 0 250px;
+}
+
+.carousel-3 {
+    background: linear-gradient(#0008, #0008), url("https://academiaestrellas.com/wp-content/uploads/2016/04/bellezatodoslosdias.jpg") no-repeat fixed;
+    background-size: cover;
+    border-radius: 0 0 0 250px;
 }
 
 .text-title h1 {
@@ -19,18 +34,44 @@
     width: 100px;
 }
 
+
 /* About title */
+
 .mision-vision-container .about-title {
     margin-bottom: 40px;
     text-align: center;
 }
 
+.mision-vision-container .about-title h1#title {
+    font-size: 55px;
+    color: #670b6a;
+    font-style: italic;
+    font-family: serif;
+    font-weight: bold;
+}
+
 .mision-vision-container .about-title h1 {
-    font-size: 40px;
+    font-size: 35px;
+    color: #949294;
+}
+
+.subtitle-mvv {
+    font-weight: bold;
+    color: #670b6a;
+    font-family: serif;
+    font-style: italic;
 }
 
 .size-mvv {
     width: 25%;
+    height: 400px;
+    padding: 10px;
+    box-shadow: 0px 25px 30px 1px rgba(0, 0, 0, 0.28);
+}
+
+.size-mvv p {
+    color: #949294;
+    font-size: 20px;
 }
 
 .size-mvv img {
@@ -40,7 +81,9 @@
     object-fit: cover;
 }
 
+
 /* Header buttons */
+
 .btn-welcome {
     width: 200px;
     padding: 10px 0;
@@ -63,6 +106,7 @@
 
 
 /*  Buttons animations */
+
 .btn-welcome:hover:nth-child(1) {
     cursor: pointer;
     animation: animated .5s ease-in 1;
