--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,8 +6,12 @@
 
 @import "components/navbar.css";
 @import "components/footer.css";
+
+/* Pages */
+
 @import "homepage.css";
 @import "gallery.css";
+@import "contact.css";
 
 /* Icons */
 
