--- a/public/css/app.css
+++ b/public/css/app.css
@@ -422,14 +422,15 @@ button:hover {
 
 .header__contact {
     width: 100%;
-    height: 80vh;
+    min-height: 80vh;
     background-image: url('https://scontent-mia3-2.xx.fbcdn.net/v/t39.30808-6/271554328_154246760276422_7525582486259297642_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ioyTERGOKiMAX_OEgjh&_nc_ht=scontent-mia3-2.xx&oh=00_AT-eh7k91eO0epP8skIynQ2s7p-EtbDQ-EcReEUK2K9ByA&oe=62204AD2');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     background-attachment: fixed;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+    position: relative;
 }
 
 .title__contact-us {
@@ -438,6 +439,10 @@ button:hover {
     font-style: italic;
     font-weight: bold;
     background: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 
@@ -453,8 +458,6 @@ button:hover {
 .cards__contact {
     position: relative;
     top: -90px;
-    /* display: flex;
-    justify-content: space-evenly; */
     display: grid;
     grid-template-columns: repeat(4, 250px);
     gap: 20px;
@@ -519,6 +522,176 @@ span {
 
 .contact__email:hover {
     color: #8C339F;
+}
+
+
+/* CONTAINER FORM */
+
+.container__form {
+    width: 100%;
+    display: flex;
+    height: 90vh;
+}
+
+
+/* FORM CONTACT */
+
+.form__contact {
+    width: 60%;
+    height: 100%;
+    background-color: #fff;
+    padding: 30px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title__form--contact {
+    font-size: 40px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+.input__name--contact,
+.input__email--contact,
+.input__message--contact {
+    width: 100%;
+    outline: none;
+    border: none;
+    /* border-bottom: 4px solid #670b6aaa; */
+    border-bottom: 4px solid #0006;
+    background-color: #eee;
+    padding: 10px 5px;
+    font-size: 18px;
+}
+
+.input__name--contact:focus,
+.input__email--contact:focus,
+.input__message--contact:focus {
+    border-color: #670b6a;
+}
+
+.input__name--contact:focus::-moz-placeholder, .input__email--contact:focus::-moz-placeholder, .input__message--contact:focus::-moz-placeholder {
+    color: #670b6a;
+}
+
+.input__name--contact:focus:-ms-input-placeholder, .input__email--contact:focus:-ms-input-placeholder, .input__message--contact:focus:-ms-input-placeholder {
+    color: #670b6a;
+}
+
+.input__name--contact:focus::placeholder,
+.input__email--contact:focus::placeholder,
+.input__message--contact:focus::placeholder {
+    color: #670b6a;
+}
+
+.input__message--contact {
+    resize: none;
+    margin: 20px 0;
+}
+
+.input__send--contact {
+    width: 50%;
+    height: 40px;
+    border: none;
+    border-radius: 32px;
+    /* background-color: #670b6acc; */
+    background-color: #000c;
+    color: #fff;
+    font-size: 18px;
+}
+
+.input__send--contact:hover {
+    /* background-color: #6d1170; */
+    /* background-color: #670b6a; */
+    background-color: #000;
+}
+
+
+/* FOLLOW US */
+
+.follow-us__contact {
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.title__follow-us {
+    letter-spacing: 2px;
+}
+
+.follow-us__icon {
+    font-size: 30px;
+    cursor: pointer;
+    color: #000;
+}
+
+.follow-us__icon:hover:nth-child(1) {
+    color: #3b5998;
+}
+
+.follow-us__icon:hover:nth-child(2) {
+    color: #de1b85;
+}
+
+.follow-us__icon:hover:nth-child(3) {
+    color: #00acee;
+}
+
+
+/* CONTACT MAP */
+
+.contact__map {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
+/* RESPONSIVE DESIGN */
+
+@media only screen and (max-width: 992px) {
+    .cards__contact {
+        grid-template-columns: repeat(4, 200px);
+        gap: 10px;
+    }
+    .contact__items {}
+}
+
+@media only screen and (max-width: 768px) {
+    .title__contact-us {
+        font-size: 70px;
+    }
+    .cards__contact {
+        grid-template-columns: repeat(2, 250px);
+    }
+    .container__form {
+        display: block;
+    }
+    .form__contact {
+        width: 100%;
+        margin-bottom: 40px;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .header__contact {
+        display: flex;
+        background-size: contain;
+        min-height: 60vh;
+    }
+    .title__contact-us {
+        font-size: 40px;
+        top: 30%;
+    }
+    .cards__contact {
+        display: block;
+    }
+    .contact__items {
+        margin-top: 20px;
+    }
 }
 /* Bootstrap */
 
