--- a/public/css/app.css
+++ b/public/css/app.css
@@ -66,6 +66,150 @@ nav.navbar {
     position: absolute;
 }
 
+*,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+/* Contenedor principal */
+
+.events-step {
+    width: 92%;
+    margin: 20px auto;
+}
+
+
+/* Título del formulario */
+
+.events-step__title {
+    font-size: 55px;
+    color: #670b6a;
+    font-style: italic;
+    font-family: serif;
+    font-weight: bold;
+    text-align: center;
+}
+
+
+/* body del formulario */
+
+.events-step__body {
+    display: flex;
+    align-items: flex-start;
+}
+
+
+/* step */
+
+.step {
+    min-width: 100%;
+    opacity: 0;
+    transition: all .2s linear;
+}
+
+.step.active {
+    opacity: 1;
+}
+
+.step.to-left {
+    margin-left: -100%;
+}
+
+.step.inactive {
+    -webkit-animation-name: scale;
+            animation-name: scale;
+    -webkit-animation-duration: .2s;
+            animation-duration: .2s;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-iteration-count: 2;
+            animation-iteration-count: 2;
+}
+
+@-webkit-keyframes scale {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+
+@keyframes scale {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+
+
+/* header de step */
+
+
+/* .step__header {} */
+
+.step__title {
+    text-align: center;
+    font-size: 30px;
+    color: #949294;
+}
+
+
+/* body de step */
+
+.step__body {
+    height: 400px;
+}
+
+
+/* step footer */
+
+.step__footer {
+    background: #008080;
+    padding: 20px 15px;
+    text-align: center;
+}
+
+
+/* step botones */
+
+.step__button {
+    display: inline-block;
+    padding: 10px;
+    background-color: blue;
+    border: none;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+
+/*  */
+
+
+/* .step__body img {
+    height: 100%;
+    max-width: 40%;
+    background-size: cover;
+    border-radius: 50px;
+} */
+
+.img-events {
+    min-height: 100%;
+    max-width: 40%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50px;
+}
+
+
+/*  */
 .header {
     width: 100%;
     height: 100vh;
@@ -103,6 +247,9 @@ nav.navbar {
 }
 
 
+/*  */
+
+
 /* About title */
 
 .mision-vision-container .about-title {
@@ -110,7 +257,7 @@ nav.navbar {
     text-align: center;
 }
 
-.mision-vision-container .about-title h1#title {
+.titles-home {
     font-size: 55px;
     color: #670b6a;
     font-style: italic;
@@ -118,8 +265,8 @@ nav.navbar {
     font-weight: bold;
 }
 
-.mision-vision-container .about-title h1 {
-    font-size: 35px;
+.mision-vision-container .about-title h1#subtitle {
+    font-size: 30px;
     color: #949294;
 }
 
@@ -134,7 +281,6 @@ nav.navbar {
     width: 25%;
     height: 400px;
     padding: 10px;
-    box-shadow: 0px 25px 30px 1px rgba(0, 0, 0, 0.28);
 }
 
 .size-mvv p {
@@ -149,6 +295,9 @@ nav.navbar {
     -o-object-fit: cover;
        object-fit: cover;
 }
+
+
+/*  */
 
 
 /* Header buttons */
@@ -173,14 +322,61 @@ nav.navbar {
     box-shadow: none;
 }
 
-
-/*  Buttons animations */
-
 .btn-welcome:hover:nth-child(1) {
     cursor: pointer;
     -webkit-animation: animated .5s ease-in 1;
             animation: animated .5s ease-in 1;
 }
+
+
+/*ABOUT US*/
+
+.about {
+    background-color: #fff;
+    margin-top: 80px;
+}
+
+.information-container {
+    margin: 70px;
+    padding: 10px;
+}
+
+div.information {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    position: relative;
+    border-radius: 80px 0px 80px 0px;
+}
+
+div.information h2 {
+    font-weight: bold;
+    color: #670b6a;
+    font-family: serif;
+    font-style: italic;
+}
+
+div.information img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: -100px;
+    transform: translateY(-50%);
+    filter: drop-shadow(0px 0px 5px #670b6a);
+}
+
+div.information>.title-profile,
+.text-profile,
+.link-profile {
+    margin-left: 100px;
+}
+
+
+/*  Buttons animations */
 
 @-webkit-keyframes animated {
     from {
