--- a/public/css/app.css
+++ b/public/css/app.css
@@ -107,6 +107,7 @@ nav.navbar {
 
 .step {
     min-width: 100%;
+    height: 500px;
     opacity: 0;
     transition: all .2s linear;
 }
@@ -164,7 +165,7 @@ nav.navbar {
 /* body de step */
 
 .step__body {
-    height: 400px;
+    height: 600px;
 }
 
 
@@ -189,23 +190,10 @@ nav.navbar {
     cursor: pointer;
 }
 
-
-/*  */
-
-
-/* .step__body img {
+.img-events img {
     height: 100%;
-    max-width: 40%;
-    background-size: cover;
-    border-radius: 50px;
-} */
-
-.img-events {
-    min-height: 100%;
-    max-width: 40%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 50px;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 
@@ -395,6 +383,9 @@ div.information>.title-profile,
         box-shadow: 0 0 0 40px #620b8a1e;
     }
 }
+
+
+/* Events carousel */
 /* GALLERY TITLE */
 
 .title-gallery {
