--- a/resources/css/components/events-in-steps.css
+++ b/resources/css/components/events-in-steps.css
@@ -39,6 +39,7 @@
 
 .step {
     min-width: 100%;
+    height: 500px;
     opacity: 0;
     transition: all .2s linear;
 }
@@ -83,7 +84,7 @@
 /* body de step */
 
 .step__body {
-    height: 400px;
+    height: 600px;
 }
 
 
@@ -108,23 +109,9 @@
     cursor: pointer;
 }
 
-
-/*  */
-
-
-/* .step__body img {
+.img-events img {
     height: 100%;
-    max-width: 40%;
-    background-size: cover;
-    border-radius: 50px;
-} */
-
-.img-events {
-    min-height: 100%;
-    max-width: 40%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 50px;
+    object-fit: cover;
 }
 
 
