--- a/resources/css/homepage.css
+++ b/resources/css/homepage.css
@@ -53,7 +53,7 @@
     font-weight: bold;
 }
 
-.mision-vision-container .about-title h1#subtitle {
+.subtitles-home {
     font-size: 30px;
     color: #949294;
 }
