--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,30 +1,25 @@
 /* Bootstrap */
-
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 
 /* Components */
-
 @import "components/navbar.css";
 @import "components/footer.css";
 @import "components/events-in-steps.css";
 
 /* Pages */
-
-@import "homepage.css";
+@import "home.css";
 @import "gallery.css";
 @import "contact.css";
 
 /* Icons */
-
 @import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
 
 /* AOS */
-
 @import "https://unpkg.com/aos@2.3.1/dist/aos.css";
 
 /* Font */
+@import "https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap";
 
-@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap');
 * {
     box-sizing: border-box;
     padding: 0;
