--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -1,27 +1,4 @@
-.header {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-}
-
-.carousel-1 {
-    background: linear-gradient(#0008, #0008), url("https://www.10wallpaper.com/wallpaper/1680x1050/1407/beauty_fashion_woman-Photo_background_wallpaper_1680x1050.jpg") no-repeat fixed;
-    background-size: cover;
-    border-radius: 0 0 0 250px;
-}
-
-.carousel-2 {
-    background: linear-gradient(#0008, #0008), url("https://media-we-cdn.oriflame.com/-/media/WE/Images/2022/CE/C3/beauty-edits-cms/b1-how-to-use-hybrid-make-up-to-achieve-a-radiant-look.ashx?u=0101010000&q=90") no-repeat fixed;
-    background-size: cover;
-    border-radius: 0 0 0 250px;
-}
-
-.carousel-3 {
-    background: linear-gradient(#0008, #0008), url("https://academiaestrellas.com/wp-content/uploads/2016/04/bellezatodoslosdias.jpg") no-repeat fixed;
-    background-size: cover;
-    border-radius: 0 0 0 250px;
-}
+@import "components/carousel.css";
 
 .text-title h1 {
     font-size: 90px;
@@ -34,13 +11,8 @@
     width: 100px;
 }
 
-
-/*  */
-
-
 /* About title */
-
-.mision-vision-container .about-title {
+.cards-home .about-title {
     margin-bottom: 40px;
     text-align: center;
 }
@@ -83,12 +55,7 @@
     object-fit: cover;
 }
 
-
-/*  */
-
-
 /* Header buttons */
-
 .btn-welcome {
     width: 200px;
     padding: 10px 0;
@@ -114,9 +81,7 @@
     animation: animated .5s ease-in 1;
 }
 
-
-/*ABOUT US*/
-
+/* About us */
 .about {
     background-color: #fff;
     margin-top: 80px;
@@ -163,7 +128,6 @@ div.information>.title-profile,
 
 
 /*  Buttons animations */
-
 @keyframes animated {
     from {
         box-shadow: 0 0 0 0 #620b8acc;
@@ -172,6 +136,3 @@ div.information>.title-profile,
         box-shadow: 0 0 0 40px #620b8a1e;
     }
 }
-
-
-/* Events carousel */
